--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,17 +91,10 @@ NewWindowHeight=1136
 NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/M_Menu
+LastLevel=/Game/Maps/WIP/Daniil/Garden_24
 
 [AssetEditorManager]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/Interface_MenuBG.Interface_MenuBG
-OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Menu.W_Menu
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1
-OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelPack.W_LevelPack
-OpenAssetsAtExit=/Game/Blueprints/Widgets/W_Store.W_Store
-OpenAssetsAtExit=/Game/Blueprints/Backgrounds/BP_Background.BP_Background
-OpenAssetsAtExit=/Game/Blueprints/Widgets/W_LevelChooser.W_LevelChooser
+CleanShutdown=True
 
 [RootWindow]
 ScreenPosition=X=94.000 Y=168.000
@@ -904,9 +897,9 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 PaperSpriteComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 MeshComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-PrimitiveComponent=
-SceneComponent=
-ActorComponent=
+PrimitiveComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+SceneComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ActorComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CameraComponent="\"Object.PostProcess.PostProcessSettings.LensFlareTints\" "
 BP_Character_Main_C=
 PaperCharacter=
@@ -1001,7 +994,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps/WIP/Daniil
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1073,7 +1066,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../BlockRoller/BlockRoller2D/Content/Maps/WIP/Daniil
+UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -1726,18 +1719,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/M_Menu
-MRUItem1=/Game/Maps/M_Loading1
-MRUItem2=/Game/Maps/WIP/Daniil/Garden_16
-MRUItem3=/Game/Maps/WIP/Daniil/Garden_17
-MRUItem4=/Game/Maps/Garden/Garden_12
-MRUItem5=/Game/Maps/Garden/Garden_11
-MRUItem6=/Game/Maps/Garden/Garden_10
-MRUItem7=/Game/Maps/Garden/Garden_1
-MRUItem8=/Game/Maps/WIP/Daniil/Garden_18
-MRUItem9=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem10=/Game/Maps/WIP/Garden_14
-MRUItem11=/Game/Maps/Garden/Garden_14
+MRUItem0=/Game/Maps/WIP/Daniil/Garden_24
+MRUItem1=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem2=/Game/Maps/Garden/Garden_14
+MRUItem3=/Game/Maps/Garden/Garden_13
+MRUItem4=/Game/Maps/Garden/Garden_11
+MRUItem5=/Game/Maps/Garden/Garden_10
+MRUItem6=/Game/Maps/Garden/Garden_12
+MRUItem7=/Game/Maps/Garden/Garden_9
+MRUItem8=/Game/Maps/WIP/Daniil/Garden_23
+MRUItem9=/Game/Maps/WIP/Daniil/Garden_17
+MRUItem10=/Game/Maps/WIP/Daniil/Garden_18
+MRUItem11=/Game/Maps/WIP/Daniil/Garden_22
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1762,24 +1755,24 @@ ShowUnusedLayers=True
 [DetailCustomWidgetExpansion]
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 PaperSpriteComponent=PaperSpriteComponent.Rendering.LOD,
-CameraComponent=CameraComponent.Lens.Lens|Depth of FieldAdvanced,CameraComponent.Lens.Lens|Depth of Field,CameraComponent.Lens.Lens|BloomAdvanced,CameraComponent.Lens.Lens|Bloom,CameraComponent.Lens.Lens|ExposureAdvanced,CameraComponent.Lens.Lens|Exposure,CameraComponent.Lens.Lens|Camera,CameraComponent.Lens.Lens|Lens Flares,CameraComponent.Color Grading.Color Grading|WhiteBalance,CameraComponent.Color Grading.Color Grading|Misc,CameraComponent.Rendering Features.Rendering Features|Ambient Cubemap,CameraComponent.Rendering Features.Rendering Features|Ambient OcclusionAdvanced,CameraComponent.Rendering Features.Rendering Features|Ambient Occlusion,CameraComponent.Rendering Features.Rendering Features|Motion Blur,CameraComponent.Rendering Features.Rendering Features|Light Propagation VolumeAdvanced,CameraComponent.Rendering Features.Rendering Features|Light Propagation Volume,CameraComponent.Rendering Features.Rendering Features|Screen Space Reflections,CameraComponent.Rendering Features.Rendering Features|Misc,CameraComponent.Lens.Lens|Chromatic Aberration,CameraComponent.Lens.Lens|Dirt Mask,CameraComponent.Lens.Lens|Image Effects,CameraComponent.Color Grading.Color Grading|Global,CameraComponent.Color Grading.Color Grading|Shadows,CameraComponent.Color Grading.Color Grading|Midtones,CameraComponent.Color Grading.Color Grading|Highlights,CameraComponent.Rendering Features.Rendering Features|Global Illumination,
+CameraComponent=CameraComponent.Lens.Lens
 EdGraph=EdGraph.Inputs.InputArgument0,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Money.BP_Money;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
 RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
