Added Circle with circle, added moving with circle, added money in easy infinity mode, money now appear in 5% times

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ Saved/Config/Windows/EditorPerProjectUserSettings.ini
 Saved/Config/Windows/Engine.ini
 Saved/Logs/MyProject.log
 Saved/Logs/MyProject.log
+Saved/Logs/MyProject.log
