--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ NewWindowHeight=1136
 NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/WIP/Daniil/Garden_24
+LastLevel=/Game/Maps/M_Loading1
 
 [AssetEditorManager]
 CleanShutdown=True
@@ -874,6 +874,12 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+BP_InfoObj_C.TransformCommon=True
+BP_InfoObj_C.Default=True
+BP_InfoObj_C.Rendering=True
+BP_InfoObj_C.Replication=True
+BP_InfoObj_C.Input=True
+BP_InfoObj_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1720,17 +1726,17 @@ DeleteVariableInUse_Warning=False
 
 [MRU]
 MRUItem0=/Game/Maps/WIP/Daniil/Garden_24
-MRUItem1=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem2=/Game/Maps/Garden/Garden_14
-MRUItem3=/Game/Maps/Garden/Garden_13
-MRUItem4=/Game/Maps/Garden/Garden_11
-MRUItem5=/Game/Maps/Garden/Garden_10
-MRUItem6=/Game/Maps/Garden/Garden_12
-MRUItem7=/Game/Maps/Garden/Garden_9
-MRUItem8=/Game/Maps/WIP/Daniil/Garden_23
-MRUItem9=/Game/Maps/WIP/Daniil/Garden_17
-MRUItem10=/Game/Maps/WIP/Daniil/Garden_18
-MRUItem11=/Game/Maps/WIP/Daniil/Garden_22
+MRUItem1=/Game/Maps/WIP/Daniil/Garden_26
+MRUItem2=/Game/Maps/WIP/Daniil/Garden_25
+MRUItem3=/Game/Maps/WIP/Daniil/Garden_27
+MRUItem4=/Game/Maps/Garden/Garden_1
+MRUItem5=/Game/Maps/Garden/Garden_4
+MRUItem6=/Game/Maps/Garden/Garden_3
+MRUItem7=/Game/Maps/Garden/Garden_2
+MRUItem8=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem9=/Game/Maps/Garden/Garden_14
+MRUItem10=/Game/Maps/Garden/Garden_13
+MRUItem11=/Game/Maps/Garden/Garden_11
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1759,12 +1765,15 @@ CameraComponent=CameraComponent.Lens.Lens
 EdGraph=EdGraph.Inputs.InputArgument0,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Money.BP_Money;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
@@ -1772,13 +1781,10 @@ RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
 RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
 RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1_Sprite.clouds_1_Sprite;
-RecentlyPlaced=/Game/Assets/Textures/game_background_1/game_background_1_Sprite.game_background_1_Sprite;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
