Reordered maps, renamed, fixed. Some minor changes worth no notify

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,13 +91,13 @@ NewWindowHeight=1136
 NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/M_Loading1
+LastLevel=/Game/Maps/Lake/Lake_20
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
 
 [RootWindow]
-ScreenPosition=X=94.000 Y=168.000
+ScreenPosition=X=297.000 Y=34.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -880,6 +880,36 @@ BP_InfoObj_C.Rendering=True
 BP_InfoObj_C.Replication=True
 BP_InfoObj_C.Input=True
 BP_InfoObj_C.Actor=True
+BP_Background_2_C.Tick=True
+BP_Background_2_C.Default=True
+BP_Background_2_C.Rendering=True
+BP_Background_2_C.Replication=True
+BP_Background_2_C.Input=True
+BP_Background_2_C.Actor=True
+BP_Background_3_C.Tick=True
+BP_Background_3_C.Default=True
+BP_Background_3_C.Rendering=True
+BP_Background_3_C.Replication=True
+BP_Background_3_C.Input=True
+BP_Background_3_C.Actor=True
+BP_Background_4_C.Tick=True
+BP_Background_4_C.Default=True
+BP_Background_4_C.Rendering=True
+BP_Background_4_C.Replication=True
+BP_Background_4_C.Input=True
+BP_Background_4_C.Actor=True
+W_LevelPack_C.Designer=True
+W_InfinityMode_C.Layout=True
+W_InfinityMode_C.Default=True
+W_InfinityMode_C.Appearance=True
+W_InfinityMode_C.Input=True
+W_InfinityMode_C.Interaction=True
+W_InfinityMode_C.Behavior=True
+W_InfinityMode_C.Render Transform=True
+W_InfinityMode_C.Performance=True
+W_InfinityMode_C.Clipping=True
+W_InfinityMode_C.Navigation=True
+W_InfinityMode_C.Events=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -918,7 +948,7 @@ BoxComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=DataValidation
 
 [UMGEditor.Designer]
 PreviewWidth=640
@@ -930,26 +960,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/W_LevelChooser
-MRUItem1=/Game/Blueprints/Backgrounds/BP_Background
-MRUItem2=/Game/Blueprints/Widgets/W_Store
-MRUItem3=/Game/Blueprints/Widgets/W_LevelPack
-MRUItem4=/Game/Blueprints/Backgrounds/Interface_MenuBG
-MRUItem5=/Game/Blueprints/Backgrounds/BP_MenuBG_1
-MRUItem6=/Game/Maps/M_Menu
-MRUItem7=/Game/Blueprints/Widgets/W_Menu
-MRUItem8=/Game/Maps/M_Loading1
-MRUItem9=/Game/Blueprints/Widgets/W_LoadingWidget
-MRUItem10=/Game/Blueprints/Interactables/BP_Key
+MRUItem0=/Game/Maps/Lake/Lake_20
+MRUItem1=/Game/Maps/Lake/Lake_18
+MRUItem2=/Game/Maps/Lake/Lake_2
+MRUItem3=/Game/Maps/Lake/Lake_1
+MRUItem4=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem5=/Game/Maps/WIP/Daniil/Garden_26
+MRUItem6=/Game/Maps/M_Loading1
+MRUItem7=/Game/Blueprints/Widgets/W_SeasonButton
+MRUItem8=/Game/Blueprints/Widgets/W_LevelPack
+MRUItem9=/Game/Blueprints/Widgets/W_LevelChooser
+MRUItem10=/Game/Blueprints/Widgets/W_Menu
 MRUItem11=/Game/Blueprints/GlobalFunctions
-MRUItem12=/Game/Blueprints/Interactables/BP_Star
-MRUItem13=/Game/Blueprints/Interactables/BP_Money
-MRUItem14=/Game/Maps/WIP/Daniil/Garden_16
-MRUItem15=/Game/Maps/WIP/Daniil/Garden_17
-MRUItem16=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration
-MRUItem17=/Game/Blueprints/LevelStuff/BP_CirclePlatform
-MRUItem18=/Game/Maps/Garden/Garden_12
-MRUItem19=/Game/Maps/Garden/Garden_11
+MRUItem12=/Game/Blueprints/Backgrounds/BP_Background_4
+MRUItem13=/Game/Blueprints/Backgrounds/BP_Background_3
+MRUItem14=/Game/Blueprints/Backgrounds/BP_Background_2
+MRUItem15=/Game/Blueprints/Backgrounds/BP_Background
+MRUItem16=/Game/Blueprints/E_MapSkins
+MRUItem17=/Game/Maps/Garden/Garden_14
+MRUItem18=/Game/Maps/Garden/Garden_13
+MRUItem19=/Game/Maps/WIP/Daniil/Garden_27
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1000,7 +1030,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/LevelStuff
+ContentBrowserTab1.SelectedPaths=/Game/Maps/WIP/Daniil
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1072,7 +1102,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
+UNR=../../../../BlockRoller/BlockRoller2D/Content/Maps/WIP/Daniil
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -1725,18 +1755,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/WIP/Daniil/Garden_24
-MRUItem1=/Game/Maps/WIP/Daniil/Garden_26
-MRUItem2=/Game/Maps/WIP/Daniil/Garden_25
-MRUItem3=/Game/Maps/WIP/Daniil/Garden_27
-MRUItem4=/Game/Maps/Garden/Garden_1
-MRUItem5=/Game/Maps/Garden/Garden_4
-MRUItem6=/Game/Maps/Garden/Garden_3
-MRUItem7=/Game/Maps/Garden/Garden_2
-MRUItem8=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem9=/Game/Maps/Garden/Garden_14
-MRUItem10=/Game/Maps/Garden/Garden_13
-MRUItem11=/Game/Maps/Garden/Garden_11
+MRUItem0=/Game/Maps/Lake/Lake_20
+MRUItem1=/Game/Maps/Lake/Lake_18
+MRUItem2=/Game/Maps/Lake/Lake_2
+MRUItem3=/Game/Maps/Lake/Lake_1
+MRUItem4=/Game/Maps/M_Loading1
+MRUItem5=/Game/Maps/WIP/Daniil/Garden_15
+MRUItem6=/Game/Maps/WIP/Daniil/Garden_26
+MRUItem7=/Game/Maps/Garden/Garden_14
+MRUItem8=/Game/Maps/Garden/Garden_13
+MRUItem9=/Game/Maps/WIP/Daniil/Garden_27
+MRUItem10=/Game/Maps/WIP/Daniil/Garden_24
+MRUItem11=/Game/Maps/WIP/Daniil/Garden_25
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
