--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ NewWindowHeight=1136
 NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Lake/Lake_20
+LastLevel=/Game/Maps/Lake/Lake_1
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -910,6 +910,24 @@ W_InfinityMode_C.Performance=True
 W_InfinityMode_C.Clipping=True
 W_InfinityMode_C.Navigation=True
 W_InfinityMode_C.Events=True
+BP_Interactable_C.TransformCommon=True
+BP_Interactable_C.Default=True
+BP_Interactable_C.Rendering=True
+BP_Interactable_C.Replication=True
+BP_Interactable_C.Input=True
+BP_Interactable_C.Actor=True
+BP_CircleWithChildCircle_C.TransformCommon=True
+BP_CircleWithChildCircle_C.Default=True
+BP_CircleWithChildCircle_C.Rendering=True
+BP_CircleWithChildCircle_C.Replication=True
+BP_CircleWithChildCircle_C.Input=True
+BP_CircleWithChildCircle_C.Actor=True
+BP_MovingPlatformWithChildCircle_C.TransformCommon=True
+BP_MovingPlatformWithChildCircle_C.Default=True
+BP_MovingPlatformWithChildCircle_C.Rendering=True
+BP_MovingPlatformWithChildCircle_C.Replication=True
+BP_MovingPlatformWithChildCircle_C.Input=True
+BP_MovingPlatformWithChildCircle_C.Actor=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -1755,18 +1773,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Lake/Lake_20
-MRUItem1=/Game/Maps/Lake/Lake_18
-MRUItem2=/Game/Maps/Lake/Lake_2
-MRUItem3=/Game/Maps/Lake/Lake_1
-MRUItem4=/Game/Maps/M_Loading1
-MRUItem5=/Game/Maps/WIP/Daniil/Garden_15
-MRUItem6=/Game/Maps/WIP/Daniil/Garden_26
-MRUItem7=/Game/Maps/Garden/Garden_14
-MRUItem8=/Game/Maps/Garden/Garden_13
-MRUItem9=/Game/Maps/WIP/Daniil/Garden_27
-MRUItem10=/Game/Maps/WIP/Daniil/Garden_24
-MRUItem11=/Game/Maps/WIP/Daniil/Garden_25
+MRUItem0=/Game/Maps/Lake/Lake_1
+MRUItem1=/Game/Maps/Lake/Lake_2
+MRUItem2=/Game/Maps/Lake/Lake_11
+MRUItem3=/Game/Maps/Lake/Lake_19
+MRUItem4=/Game/Maps/Lake/Lake_26
+MRUItem5=/Game/Maps/Lake/Lake_30
+MRUItem6=/Game/Maps/Lake/Lake_29
+MRUItem7=/Game/Maps/Lake/Lake_28
+MRUItem8=/Game/Maps/Lake/Lake_27
+MRUItem9=/Game/Maps/Lake/Lake_25
+MRUItem10=/Game/Maps/Lake/Lake_20
+MRUItem11=/Game/Maps/Lake/Lake_18
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1795,26 +1813,26 @@ CameraComponent=CameraComponent.Lens.Lens
 EdGraph=EdGraph.Inputs.InputArgument0,
 
 [PlacementMode]
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_InfoObj.BP_InfoObj;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CircleWithChildCircle.BP_CircleWithChildCircle;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Interactable.BP_Interactable;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Money.BP_Money;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
-RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background.BP_Background;
-RecentlyPlaced=/Game/Blueprints/Background_Sprite_Blueprint.Background_Sprite_Blueprint;
-RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_2_Sprite.clouds_2_Sprite;
-RecentlyPlaced=/Game/Assets/Textures/game_background_1/layers/clouds_1_Sprite.clouds_1_Sprite;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
