--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ NewWindowHeight=1136
 NewWindowPosition=(X=635,Y=0)
 
 [EditorStartup]
-LastLevel=/Game/Maps/Lake/Lake_1
+LastLevel=/Game/Maps/Lake/Lake_31
 
 [AssetEditorManager]
 CleanShutdown=False
@@ -928,6 +928,14 @@ BP_MovingPlatformWithChildCircle_C.Rendering=True
 BP_MovingPlatformWithChildCircle_C.Replication=True
 BP_MovingPlatformWithChildCircle_C.Input=True
 BP_MovingPlatformWithChildCircle_C.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
@@ -964,6 +972,7 @@ REINST_BP_Character_Main_C_1177="\"Object.Replication.ReplicatedMovement\" "
 REINST_BP_Character_Main_C_1750="\"Object.Replication.ReplicatedMovement\" "
 BoxComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+CapsuleComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=DataValidation
@@ -1048,7 +1057,7 @@ User Created=False
 Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Maps/WIP/Daniil
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Interactables
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -1120,7 +1129,7 @@ OnePane.Viewport 1.bIsMaximized=False
 OnePane.Viewport 1.MaximizedViewport=None
 
 [Directories2]
-UNR=../../../../BlockRoller/BlockRoller2D/Content/Maps/WIP/Daniil
+UNR=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Lake
 BRUSH=../../../../BlockRoller/BlockRoller2D/Content/
 FBX=../../../../BlockRoller/BlockRoller2D/Content/
 FBXAnim=../../../../BlockRoller/BlockRoller2D/Content/
@@ -1130,7 +1139,7 @@ GenericOpen=../../../../BlockRoller/BlockRoller2D/Content/
 GenericSave=../../../../BlockRoller/BlockRoller2D/Content/
 MeshImportExport=../../../../BlockRoller/BlockRoller2D/Content/
 WorldRoot=../../../../BlockRoller/BlockRoller2D/Content/
-Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/WIP/Daniil
+Level=../../../../../../ONUGAMES/BlockRoller2D/Content/Maps/Lake
 Project=F:/UE_4.21/
 
 [ModuleFileTracking]
@@ -1773,18 +1782,18 @@ MeshBuilder.LastCompileMethod=Unknown
 DeleteVariableInUse_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/Lake/Lake_1
-MRUItem1=/Game/Maps/Lake/Lake_2
-MRUItem2=/Game/Maps/Lake/Lake_11
-MRUItem3=/Game/Maps/Lake/Lake_19
-MRUItem4=/Game/Maps/Lake/Lake_26
-MRUItem5=/Game/Maps/Lake/Lake_30
-MRUItem6=/Game/Maps/Lake/Lake_29
-MRUItem7=/Game/Maps/Lake/Lake_28
-MRUItem8=/Game/Maps/Lake/Lake_27
-MRUItem9=/Game/Maps/Lake/Lake_25
-MRUItem10=/Game/Maps/Lake/Lake_20
-MRUItem11=/Game/Maps/Lake/Lake_18
+MRUItem0=/Game/Maps/Lake/Lake_31
+MRUItem1=/Game/Maps/Lake/Lake_30
+MRUItem2=/Game/Maps/Lake/Lake_1
+MRUItem3=/Game/Maps/Lake/Lake_2
+MRUItem4=/Game/Maps/Lake/Lake_11
+MRUItem5=/Game/Maps/Lake/Lake_19
+MRUItem6=/Game/Maps/Lake/Lake_26
+MRUItem7=/Game/Maps/Lake/Lake_29
+MRUItem8=/Game/Maps/Lake/Lake_28
+MRUItem9=/Game/Maps/Lake/Lake_27
+MRUItem10=/Game/Maps/Lake/Lake_25
+MRUItem11=/Game/Maps/Lake/Lake_20
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -1814,18 +1823,18 @@ EdGraph=EdGraph.Inputs.InputArgument0,
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_InfoObj.BP_InfoObj;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CircleWithChildCircle.BP_CircleWithChildCircle;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Interactable.BP_Interactable;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Invis.BP_Invis;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_MenuBG_1.BP_MenuBG_1;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Money.BP_Money;
