--- a/Saved/Config/Windows/Engine.ini
+++ b/Saved/Config/Windows/Engine.ini
@@ -37,7 +37,7 @@ WindowMirrorMode=1
 FlipNormalMapGreenChannel=False
 
 [WindowsApplication.Accessibility]
-StickyKeysHotkey=True
+StickyKeysHotkey=False
 ToggleKeysHotkey=True
 FilterKeysHotkey=True
 StickyKeysConfirmation=True
