--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,11 +8,15 @@ CompanyName=ONU Games
 ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "54A6E1DC4AEAAD7467A7B0B94CCE88A9", "Block Roller 2D")
 ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "20F837E8410FDBD8288EF7A7661ED5D1", "Block Roller 2D")
 bShouldWindowPreserveAspectRatio=False
-ProjectVersion=1.0.2
+ProjectVersion=0.7.1
+CompanyDistinguishedName=PJTeam
 
 [/Script/UnrealEd.ProjectPackagingSettings]
 StagingDirectory=(Path="../../../../BlockRoller/BlockRoller Beta v1.2")
-BuildConfiguration=PPBC_ShippingClient
-FullRebuild=True
+BuildConfiguration=PPBC_DevelopmentClient
+FullRebuild=False
 ForDistribution=False
 
+[/Script/MoviePlayer.MoviePlayerSettings]
+bWaitForMoviesToComplete=False
+bMoviesAreSkippable=False
