Fixed some bugs

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -83,7 +83,7 @@ MultipleInstanceLastHeight=1136
 MultipleInstanceLastWidth=640
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-4GJPE4Q
 LastExecutedLaunchName=DESKTOP-4GJPE4Q
-LastExecutedPIEPreviewDevice=iPhone 6
+LastExecutedPIEPreviewDevice=iPhone 5S
 DeviceToEmulate=iPhone5S
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 NewWindowWidth=640
@@ -94,7 +94,9 @@ NewWindowPosition=(X=612,Y=34)
 LastLevel=/Game/Maps/M_Loading1
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList.W_AchievementList
+OpenAssetsAtExit=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton.W_SeasonButton
 
 [RootWindow]
 ScreenPosition=X=308.000 Y=363.000
@@ -1262,14 +1264,14 @@ TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSet
 Widget="\"Object.Render Transform.RenderTransform\" "
 Visual="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
 Border="\"Object.Appearance.Background\" \"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" \"Object.Render Transform.RenderTransform\" "
-W_SeasonButton_C=
+W_SeasonButton_C="\"Object.Render Transform.RenderTransform\" "
 UserWidget="\"Object.Render Transform.RenderTransform\" "
-ScrollBox="\"Object.Style.WidgetStyle\" "
+ScrollBox="\"Object.Style.WidgetStyle\" \"Object.Render Transform.RenderTransform\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1289,7 +1291,7 @@ REINST_BP_Character_Main_C_1750="\"Object.Replication.ReplicatedMovement\" "
 BoxComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 ShapeComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 CapsuleComponent="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
-Spacer=
+Spacer="\"Object.Render Transform.RenderTransform\" "
 Overlay="\"Object.Render Transform.RenderTransform\" "
 W_Menu_C=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
@@ -1309,6 +1311,8 @@ PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Obje
 UMGEditorProjectSettings="\"Object.Compiler.DefaultCompilerOptions\" "
 AndroidRuntimeSettings="\"Object.Advanced APK Packaging.GoogleVRCaps\" "
 LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
+W_AchievementList_C="\"Object.Render Transform.RenderTransform\" "
+W_LevelChooser_C="\"Object.Render Transform.RenderTransform\" "
 
 [MessageLog]
 LastLogListing=PIE
@@ -1323,26 +1327,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Widgets/Menu/SecondLayer/W_LevelPack
-MRUItem1=/Game/Blueprints/GlobalFunctions
-MRUItem2=/Game/Blueprints/Widgets/Menu/W_Menu
-MRUItem3=/Game/Blueprints/SM_Music
-MRUItem4=/Game/Blueprints/SM_Sound
-MRUItem5=/Game/Movies/_RAW__SWEDTHEGAME_
-MRUItem6=/Game/Blueprints/BP_GameInstance
-MRUItem7=/Game/Blueprints/Widgets/Loading/W_LoadingWidget
-MRUItem8=/Game/Blueprints/Widgets/StandartMode/W_Pause
-MRUItem9=/Game/Blueprints/Widgets/Menu/W_Settings
-MRUItem10=/Game/Blueprints/BP_GlobalSave
-MRUItem11=/Game/Blueprints/BP_SaveLevel
-MRUItem12=/Game/Blueprints/Widgets/StandartMode/W_Interface
-MRUItem13=/Game/Blueprints/Widgets/Menu/FirstLayer/W_Achievement
-MRUItem14=/Game/Blueprints/Widgets/Menu/FirstLayer/W_InfinityMode
-MRUItem15=/Game/Blueprints/Widgets/StandartMode/W_LooseScreen
-MRUItem16=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem17=/Game/Blueprints/BP_AchievementsComponent
-MRUItem18=/Game/Blueprints/Widgets/Menu/FirstLayer/W_Achievement_Closed
-MRUItem19=/Game/Blueprints/Widgets/Menu/W_Achievement
+MRUItem0=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
+MRUItem1=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
+MRUItem2=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
+MRUItem3=/Game/Blueprints/Backgrounds/Interface_MenuBG
+MRUItem4=/Game/Blueprints/Widgets/Menu/W_Menu
+MRUItem5=/Game/Maps/M_Loading1
+MRUItem6=/Game/Maps/Lake/Lake_20
+MRUItem7=/Game/Maps/Lake/Lake_19
+MRUItem8=/Game/Maps/Lake/Lake_27
+MRUItem9=/Game/Maps/Lake/Lake_26
+MRUItem10=/Game/Maps/Lake/Lake_25
+MRUItem11=/Game/Maps/Lake/Lake_24
+MRUItem12=/Game/Maps/Lake/Lake_23
+MRUItem13=/Game/Maps/Lake/Lake_22
+MRUItem14=/Game/Maps/Lake/Lake_21
+MRUItem15=/Game/Maps/Lake/Lake_18
+MRUItem16=/Game/Maps/Medium_Difficulty_Levels/Mountain_28_FIX_ME
+MRUItem17=/Game/Maps/Medium_Difficulty_Levels/Mountain_27_FIX_ME
+MRUItem18=/Game/Blueprints/Widgets/Menu/SecondLayer/W_LevelPack
+MRUItem19=/Game/Blueprints/GlobalFunctions
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -1449,6 +1453,10 @@ AssetDialog.CurrentViewType=1
 /Game/Blueprints/Widgets/Menu/FirstLayer/W_Achievement_Closed.W_Achievement_Closed=1
 /Game/Blueprints/BP_GameInstance.BP_GameInstance=1
 /Game/Movies/_RAW__SWEDTHEGAME_._RAW__SWEDTHEGAME_=1
+/Game/Blueprints/Widgets/Menu/W_Menu.W_Menu=1
+/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser.W_LevelChooser=1
+/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList.W_AchievementList=1
+/Game/Blueprints/Backgrounds/Interface_MenuBG.Interface_MenuBG=1
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=OnePane
@@ -2128,17 +2136,17 @@ ChangeVariableType_Warning=False
 
 [MRU]
 MRUItem0=/Game/Maps/M_Loading1
-MRUItem1=/Game/Maps/Lake/Lake_1
-MRUItem2=/Game/Maps/Lake/Lake_37
-MRUItem3=/Game/Maps/Lake/Lake_36
-MRUItem4=/Game/Maps/Lake/Lake_35
-MRUItem5=/Game/Maps/Lake/Lake_23
-MRUItem6=/Game/Maps/Lake/Lake_34
-MRUItem7=/Game/Maps/Lake/Lake_33
-MRUItem8=/Game/Maps/Lake/Lake_32
-MRUItem9=/Game/Maps/Lake/Lake_31
-MRUItem10=/Game/Maps/Lake/Lake_30
-MRUItem11=/Game/Maps/Lake/Lake_2
+MRUItem1=/Game/Maps/Lake/Lake_20
+MRUItem2=/Game/Maps/Lake/Lake_19
+MRUItem3=/Game/Maps/Lake/Lake_27
+MRUItem4=/Game/Maps/Lake/Lake_26
+MRUItem5=/Game/Maps/Lake/Lake_25
+MRUItem6=/Game/Maps/Lake/Lake_24
+MRUItem7=/Game/Maps/Lake/Lake_23
+MRUItem8=/Game/Maps/Lake/Lake_22
+MRUItem9=/Game/Maps/Lake/Lake_21
+MRUItem10=/Game/Maps/Lake/Lake_18
+MRUItem11=/Game/Maps/Medium_Difficulty_Levels/Mountain_28_FIX_ME
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
