Added big secret chamber, added NightForest_3

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,13 +91,11 @@ NewWindowHeight=1136
 NewWindowPosition=(X=612,Y=34)
 
 [EditorStartup]
-LastLevel=/Game/Maps/NightForest_2
+LastLevel=/Game/Maps/NightForest/NightForest_3
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small.BP_SecretChamber_Small
-OpenAssetsAtExit=/Game/Blueprints/Widgets/StandartMode/W_Info.W_Info
-OpenAssetsAtExit=/Game/Blueprints/Characters/BP_Character_Main.BP_Character_Main
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big
 OpenAssetsAtExit=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber
 
 [RootWindow]
@@ -1292,10 +1290,16 @@ BP_RotatBuff_C.Rendering=True
 BP_RotatBuff_C.Replication=True
 BP_RotatBuff_C.Input=True
 BP_RotatBuff_C.Actor=True
+BP_SecretChamber_Big_C.Tick=True
+BP_SecretChamber_Big_C.Rendering=True
+BP_SecretChamber_Big_C.Replication=True
+BP_SecretChamber_Big_C.Input=True
+BP_SecretChamber_Big_C.Actor=True
+BP_SecretChamber_Big_C.TransformCommon=True
 
 [DetailPropertyExpansion]
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
-Object="\"Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Object=
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Render Transform.RenderTransform\" "
@@ -1366,26 +1370,26 @@ ScaleFactor=1.000000
 bCanPreviewSwapAspectRatio=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small
-MRUItem1=/Game/Blueprints/Widgets/StandartMode/W_Info
-MRUItem2=/Game/Maps/NightForest_2
-MRUItem3=/Game/Blueprints/Characters/BP_Character_Main
-MRUItem4=/Game/Blueprints/LevelStuff/BP_SecretChamber
-MRUItem5=/Game/Blueprints/LevelStuff/BP_Portal_OneTime
-MRUItem6=/Game/Blueprints/LevelStuff/BP_Portal
-MRUItem7=/Game/Maps/test
-MRUItem8=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
-MRUItem9=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
-MRUItem10=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
-MRUItem11=/Game/Blueprints/Backgrounds/Interface_MenuBG
-MRUItem12=/Game/Blueprints/Widgets/Menu/W_Menu
-MRUItem13=/Game/Maps/M_Loading1
-MRUItem14=/Game/Maps/Lake/Lake_20
-MRUItem15=/Game/Maps/Lake/Lake_19
-MRUItem16=/Game/Maps/Lake/Lake_27
-MRUItem17=/Game/Maps/Lake/Lake_26
-MRUItem18=/Game/Maps/Lake/Lake_25
-MRUItem19=/Game/Maps/Lake/Lake_24
+MRUItem0=/Game/Blueprints/LevelStuff/BP_SecretChamber
+MRUItem1=/Game/Maps/NightForest/NightForest_3
+MRUItem2=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big
+MRUItem3=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small
+MRUItem4=/Game/Blueprints/Widgets/StandartMode/W_Info
+MRUItem5=/Game/Maps/NightForest_2
+MRUItem6=/Game/Blueprints/Characters/BP_Character_Main
+MRUItem7=/Game/Blueprints/LevelStuff/BP_Portal_OneTime
+MRUItem8=/Game/Blueprints/LevelStuff/BP_Portal
+MRUItem9=/Game/Maps/test
+MRUItem10=/Game/Blueprints/Widgets/Menu/FirstLayer/W_SeasonButton
+MRUItem11=/Game/Blueprints/Widgets/Menu/FirstLayer/W_AchievementList
+MRUItem12=/Game/Blueprints/Widgets/Menu/FirstLayer/W_LevelChooser
+MRUItem13=/Game/Blueprints/Backgrounds/Interface_MenuBG
+MRUItem14=/Game/Blueprints/Widgets/Menu/W_Menu
+MRUItem15=/Game/Maps/M_Loading1
+MRUItem16=/Game/Maps/Lake/Lake_20
+MRUItem17=/Game/Maps/Lake/Lake_19
+MRUItem18=/Game/Maps/Lake/Lake_27
+MRUItem19=/Game/Maps/Lake/Lake_26
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 AutoReimportDirectorySettings=(SourceDirectory="/Game/",MountPoint="",Wildcards=((Wildcard="Localization/*")))
@@ -2175,18 +2179,18 @@ DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
 
 [MRU]
-MRUItem0=/Game/Maps/NightForest/NightForest_2
-MRUItem1=/Game/Maps/NightForest_2
-MRUItem2=/Game/Maps/NightForest_1
-MRUItem3=/Game/Maps/test
-MRUItem4=/Game/Maps/M_Loading1
-MRUItem5=/Game/Maps/Lake/Lake_20
-MRUItem6=/Game/Maps/Lake/Lake_19
-MRUItem7=/Game/Maps/Lake/Lake_27
-MRUItem8=/Game/Maps/Lake/Lake_26
-MRUItem9=/Game/Maps/Lake/Lake_25
-MRUItem10=/Game/Maps/Lake/Lake_24
-MRUItem11=/Game/Maps/Lake/Lake_23
+MRUItem0=/Game/Maps/NightForest/NightForest_3
+MRUItem1=/Game/Maps/NightForest/NightForest_2
+MRUItem2=/Game/Maps/NightForest_2
+MRUItem3=/Game/Maps/NightForest_1
+MRUItem4=/Game/Maps/test
+MRUItem5=/Game/Maps/M_Loading1
+MRUItem6=/Game/Maps/Lake/Lake_20
+MRUItem7=/Game/Maps/Lake/Lake_19
+MRUItem8=/Game/Maps/Lake/Lake_27
+MRUItem9=/Game/Maps/Lake/Lake_26
+MRUItem10=/Game/Maps/Lake/Lake_25
+MRUItem11=/Game/Maps/Lake/Lake_24
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2275,26 +2279,26 @@ UdpMessagingSettings=MoviePlayerSettings.Movies.StartupMovies,
 WmfMediaSettings=MoviePlayerSettings.Movies.StartupMovies,
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Star.BP_Star;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal.BP_Portal;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CirclePlatform.BP_CirclePlatform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Platform.BP_Platform;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_BuffSpeed.BP_BuffSpeed;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Big.BP_SecretChamber_Big;
+RecentlyPlaced=/Game/Blueprints/Interactables/BP_RotatBuff.BP_RotatBuff;
+RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_Portal_OneTime.BP_Portal_OneTime;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber_Small.BP_SecretChamber_Small;
 RecentlyPlaced=/Game/Blueprints/Backgrounds/BP_Background_3.BP_Background_3;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_SecretChamber.BP_SecretChamber;
 RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_LockedDoor.BP_LockedDoor;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform.BP_MovingPlatform;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Key.BP_Key;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_RandHorPlatforms.BP_RandHorPlatforms;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_CircleWithChildCircle.BP_CircleWithChildCircle;
 RecentlyPlaced=/Game/Blueprints/Interactables/BP_Slow.BP_Slow;
 RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatform_OneIteration.BP_MovingPlatform_OneIteration;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_InfoObj.BP_InfoObj;
-RecentlyPlaced=/Game/Blueprints/LevelStuff/BP_MovingPlatformWithChildCircle.BP_MovingPlatformWithChildCircle;
-RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 
 [PathColor]
 /Game/Assets=(R=0.000000,G=0.106163,B=0.500000,A=1.000000)
@@ -2332,6 +2336,13 @@ RecentlyPlaced=/Game/Blueprints/Interactables/BP_Shield.BP_Shield;
 /Game/Maps/WIP/Normal=(R=0.500000,G=0.425738,B=0.000000,A=1.000000)
 /Game/Movies=(R=1.000000,G=0.085798,B=0.000000,A=1.000000)
 /Game/Blueprints/Backgrounds=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/InfinityMode=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/Loading=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/Menu=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/Menu/FirstLayer=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/Menu/SecondLayer=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/Menu/Shop=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
+/Game/Blueprints/Widgets/StandartMode=(R=0.500000,G=0.007076,B=0.429633,A=1.000000)
 
 [DetailCategoriesAdvanced]
 Border.Appearance=True
